# HomeTask4

./: .gitignore  CMakeLists.txt  Doxyfile  MetaFunctions_8cpp.html  MetaFunctions_8h.html  MetaFunctions_8h_source.html  PrintIP_8cpp.html  PrintIP_8h.html  PrintIP_8h_source.html  README.md  README_8md.html  annotated.html  classes.html  dir_9f260ab79832f5faa78b2bc2fcb6d90c.html  dir_aa1f574de91a66253d34066d94507d78.html  files.html  globals.html  globals_func.html  hierarchy.html  index.html  main.cpp  main_8cpp.html  md_README.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespacemeta.html  namespaceparse.html  namespaces.html  pages.html  structmeta_1_1is__container.html  structmeta_1_1is__container_3_01std_1_1list_3_01Ts_8_8_8_01_4_01_4.html  structmeta_1_1is__container_3_01std_1_1vector_3_01Ts_8_8_8_01_4_01_4.html  structmeta_1_1is__tuple.html  structmeta_1_1is__tuple_3_01std_1_1tuple_3_01Ts_8_8_8_01_4_01_4.html  tests.cpp  tests_8cpp.html
.github/workflows/: documentation.yml  release.yml
MetaFunctions/: CMakeLists.txt  MetaFunctions.cpp  MetaFunctions.h
PrintIP/: CMakeLists.txt  PrintIP.cpp  PrintIP.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  classes_0.js  files_0.js  files_1.js  files_3.js  functions_0.js  functions_2.js  functions_3.js  namespaces_0.js  namespaces_1.js  pages_0.js  searchdata.js  variables_0.js
